assets/css/style.css
body {
  text-align: center;
  font-family: "Kalam", sans-serif;
  font-size: 24px;
}

h1, h2 {
  font-weight: bold;
}

.navbar {
  min-height: 5vh;
}

.navbar-brand img {
  height: 38px;
}

.container-fluid, 
.container-md {
    background-color: blanchedalmond;
}

.homeWrapper,
.levelWrapper, 
.gameWrapper {
  min-height: 88vh;
  margin: 0 auto;
  padding-top: 36px;
}

.levelWrapper, 
.gameWrapper {
  background: url("../img/gym.jpg") no-repeat center center fixed;
  background-size: contain;
}

.homeWrapper {
  background: url("../img/home.jpg") no-repeat center center fixed;
  background-size: contain;
}

.homeForm {
    margin-top: 45vh;
}

.homeForm button {
    height: 48px;
    width: 128px;
    font-size: 24px;
    margin: 0 auto;
}

#messageArea {
  min-height: 15vh;
  margin: 0 12px 12px;
  padding: 24px 8px 8px;
  font-size: 4vh;
  font-weight: bold;
}



/** 
 * Level selection buttons.
 * Flip animation code obtained from W3Schools and adapted.
 **/
.levelButton {
  display: inline-block;
  height: 200px;
  width: 200px;
  background-color: transparent;
  margin: 16px; 
}

.levelButtonContainer {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.levelButton:hover .levelButtonContainer {
  transform: rotateY(180deg);
}

.levelButtonFront, 
.levelButtonBack {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  border-radius: 5px;
  box-shadow: 4px 4px 4px navy;
}

.levelButtonFront {
  padding: 12px;
  background-color: white;
}

.levelButtonBack {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: lightblue;
  border: 1px solid burlywood;
  transform: rotateY(180deg);
}

.levelButtonBack h4 {
  margin-bottom: 16px;
}

.levelButtonBack img,
.levelButtonBack div {
    margin: 0 auto 12px;
    border: .5px solid black;
    border-radius: 5px;
}

.levelButtonBack div {
    height: 80px;
    width: 80px;
    background-color: blueviolet;
    margin: 0 auto 12px;
}

#gameArea {
  background-color: rgba(0,0,0,0.2);
  border-radius: 5px;
  min-height: 50vh;
  max-width: 100%;
  margin: 0 auto;
  padding: 6px;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  align-content: center;
  overflow: none;
}

.tile {
  height: 13vw;
  width: 13vw;
  display: inline-block;
  margin: 6px;
  border: 1px solid black;
  border-radius: 8px;
  transition: transform .5s;
}

.tile:hover {
  filter: brightness(110%);
}

@media screen and (min-width: 768px) {
  .tile {
  height: 12vw;
  width: 12vw;
  }
}

@media screen and (min-width: 1200px) {
  #gameArea {
  flex-direction: column wrap;
  max-width: 65%;
  padding: 18px;
  }

  .tile {
  height: 6vw;
  width: 6vw;
  }
}


/* Beginner tile set */
.beginnerPair1 {
  background: url("../img/beginner/beginnerPair1.png") center center;
  background-size: contain;
}

.beginnerPair2 {
  background: url("../img/beginner/beginnerPair2.png") center center;
  background-size: contain;
}

.beginnerPair3 {
  background: url("../img/beginner/beginnerPair3.png") center center;
  background-size: contain;
}

.beginnerPair4 {
  background: url("../img/beginner/beginnerPair4.png") center center;
  background-size: contain;
}

.beginnerPair5 {
  background: url("../img/beginner/beginnerPair5.png") center center;
  background-size: contain;
}

.beginnerPair6 {
  background: url("../img/beginner/beginnerPair6.png") center center;
  background-size: contain;
}

.beginnerPair7 {
  background: url("../img/beginner/beginnerPair7.png") center center;
  background-size: contain;
}

.beginnerPair8 {
  background: url("../img/beginner/beginnerPair8.png") center center;
  background-size: contain;
}

/* Intermediate tile set */
.intermediatePair1 {
  background-color: blueviolet;
}

.intermediatePair2 {
  background-color: plum;
}

.intermediatePair3 {
  background-color: cornflowerblue;
}

.intermediatePair4 {
  background-color: chartreuse;
}

.intermediatePair5 {
  background-color: beige;
}

.intermediatePair6 {
  background-color: coral;
}

.intermediatePair7 {
  background-color: darkred;
}

.intermediatePair8 {
  background-color: teal;
}

.intermediatePair9 {
  background-color: navy;
}

.intermediatePair10 {
  background-color: turquoise;
}

.intermediatePair11 {
  background-color: grey;
}

.intermediatePair12 {
  background-color: yellow;
}

/* Expert tile set */
.expertPair1 {
  background: url("../img/expert/expertPair1.png") center center;
  background-size: contain;
}

.expertPair2 {
  background: url("../img/expert/expertPair2.png") center center;
  background-size: contain;
}

.expertPair3 {
  background: url("../img/expert/expertPair3.png") center center;
  background-size: contain;
}

.expertPair4 {
  background: url("../img/expert/expertPair4.png") center center;
  background-size: contain;
}

.expertPair5 {
  background: url("../img/expert/expertPair5.png") center center;
  background-size: contain;
}

.expertPair6 {
  background: url("../img/expert/expertPair6.png") center center;
  background-size: contain;
}

.expertPair7 {
  background: url("../img/expert/expertPair7.png") center center;
  background-size: contain;
}

.expertPair8 {
  background: url("../img/expert/expertPair8.png") center center;
  background-size: contain;
}

.expertPair9 {
  background: url("../img/expert/expertPair9.png") center center;
  background-size: contain;
}

.expertPair10 {
  background: url("../img/expert/expertPair10.png") center center;
  background-size: contain;
}

.expertPair11 {
  background: url("../img/expert/expertPair11.png") center center;
  background-size: contain;
}

.expertPair12 {
  background: url("../img/expert/expertPair12.png") center center;
  background-size: contain;
}

.expertPair13 {
  background: url("../img/expert/expertPair13.png") center center;
  background-size: contain;
}

.expertPair14 {
  background: url("../img/expert/expertPair14.png") center center;
  background-size: contain;
}

.expertPair15 {
  background: url("../img/expert/expertPair15.png") center center;
  background-size: contain;
}

.expertPair16 {
  background: url("../img/expert/expertPair16.png") center center;
  background-size: contain;
}

.expertPair17 {
  background: url("../img/expert/expertPair17.png") center center;
  background-size: contain;
}

.expertPair18 {
  background: url("../img/expert/expertPair18.png") center center;
  background-size: contain;
}


/* Special tile classes */
.faceDown {
  background: url("../img/background.jpg") center center no-repeat;
}

.completed {
  background: transparent;
  border: none;
}



#restartButton {
  margin-top: 6px;
  margin-bottom: 24px;
  font-size: 24px;
}

.footerBar {
  background-color: lightgray;
  height: 4vh;
  font-size: 1.5vh;
  font-family: "Helvetica", sans-serif;
  text-align: center;
  padding: 1.25vh;
}

